--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
         classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
         classpath "org.liquibase:liquibase-gradle-plugin:1.2.1"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.9"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.10"
     }
 
     //try to pull repository credentials from either properties or environment variables
@@ -75,10 +75,13 @@ repositories {
         }
     }
 }
-if (project.version.endsWith('-SNAPSHOT')) {
+
+if (!isReleaseVersion) {
     configurations.all {
         // check for updates every build
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+        resolutionStrategy{
+            cacheChangingModulesFor 0, 'seconds'
+        }
     }
 }
 dependencies {
