Changes related to things learned in microservices experiment branch.

--- a/config/application.properties
+++ b/config/application.properties
@@ -32,7 +32,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:./config/database/centralcontroller
 
-spring.messages.basename=messages/messages
+spring.messages.basename=messages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
