--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
  */
 buildscript {
     ext.commonVersion = '0.2-SNAPSHOT'
-    ext.springBootVersion = '1.4.1.RELEASE'
+    ext.springBootVersion = '1.4.2.RELEASE'
     ext.tornadofxVersion = '1.5.7'
     ext.junitVersion = '4.12'
     ext.log4jVersion = '2.6.2'
@@ -54,7 +54,7 @@ version '0.2-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'signing'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'propdeps'
 apply plugin: 'org.liquibase.gradle'
 def isReleaseVersion = !version.endsWith("SNAPSHOT")
