Work on file services

--- a/config/application.properties
+++ b/config/application.properties
@@ -30,7 +30,7 @@ logging.level.org.springframework=DEBUG
 
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:./config/database/centralcontroller
+spring.datasource.url=jdbc:h2:./config/database/centralcontroller;DB_CLOSE_ON_EXIT=FALSE
 
 spring.messages.basename=messages
 spring.messages.cache-seconds=-1
