Work on file services

--- a/config/application.properties
+++ b/config/application.properties
@@ -22,6 +22,8 @@ info.build.version=${version}
 cloudservices.directory = ./config/extensions
 cloudservices.configFileName = cloud-service-extension.json
 
+cloudservicefiles.maxFileVersions = 2
+
 encryptionservices.directory = config/extensions
 encryptionservices.configFileName = encryption-service-extension.json
 
