--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -148,7 +148,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
         - createTable:
-            tableName: file_cloud_service
+            tableName: cloud_service_file
             columns:
               - column:
                   name: id
@@ -165,6 +165,11 @@ databaseChangeLog:
               - column:
                   name: cloud_service_uuid
                   type: char(36)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: path
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
