--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@
 buildscript {
     ext.commonVersion = '0.2-SNAPSHOT'
     ext.springBootVersion = '1.4.2.RELEASE'
-    ext.tornadofxVersion = '1.5.7'
+    ext.tornadofxVersion = '1.5.9'
     ext.junitVersion = '4.12'
     ext.log4jVersion = '2.6.2'
-    ext.kotlinVersion = '1.0.5-2'
+    ext.kotlinVersion = '1.0.6'
     ext.apacheCommonsValidatorVersion = '1.5.1'
     ext.apacheCommonsCompressionVersion = '1.12'
     ext.jacksonVersion = '2.8.5'
