--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
     ext.tornadofxVersion = '1.5.9'
     ext.junitVersion = '4.12'
     ext.log4jVersion = '2.6.2'
-    ext.kotlinVersion = '1.1-M04'
+    ext.kotlinVersion = '1.1.0-beta-17'
     ext.apacheCommonsValidatorVersion = '1.5.1'
     ext.apacheCommonsCompressionVersion = '1.12'
     ext.jacksonVersion = '2.8.5'
