Added email on user creation.  Fixed some bugs with user creation.

--- a/config/application.properties
+++ b/config/application.properties
@@ -38,8 +38,16 @@ spring.messages.basename=messages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
 
-#eureka.instance.hostname=localhost
-#eureka.client.serviceUrl.defaultZone= https://${eureka.instance.hostname}:${server.port}/eureka/
+# Email server settings
+spring.mail.username=
+spring.mail.host=
+spring.mail.password=
+spring.mail.default-encoding=UTF-8
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 server.port=33300
 
@@ -48,3 +56,5 @@ server.ssl.key-store = ./config/security/keystore.p12
 server.ssl.key-store-password = insecurepassword
 server.ssl.keyStoreType = PKCS12
 server.ssl.keyAlias = cloudbackenc
+
+
