--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -168,7 +168,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: path
+                  name: locator
                   type: varchar(255)
                   constraints:
                     nullable: false
