--- a/config/application.properties
+++ b/config/application.properties
@@ -24,11 +24,13 @@ cloudservices.configFileName = cloud-service-extension.json
 
 cloudservicefiles.maxFileVersions = 2
 
-encryptionservices.directory = config/extensions
+encryptionservices.directory = ./config/extensions
 encryptionservices.configFileName = encryption-service-extension.json
 
-logging.file=logs/CentralController.log
-logging.level.org.springframework=DEBUG
+logging.file=./logs/CentralController.log
+logging.level.root=INFO
+logging.level.com.irotsoma=DEBUG
+logging.level.org.springframework=INFO
 
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
@@ -56,4 +58,6 @@ server.ssl.key-store-password = insecurepassword
 server.ssl.keyStoreType = PKCS12
 server.ssl.keyAlias = cloudbackenc
 
+jwt.secret=insecurepassword
+jwt.header = X-AUTH-TOKEN
 
