Some work on jwt authentication

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
     ext.commonVersion = '0.2-SNAPSHOT'
     ext.springBootVersion = '1.5.2.RELEASE'
     ext.tornadofxVersion = '1.6.0'
-    ext.kotlinVersion = '1.1.0'
+    ext.kotlinVersion = '1.1.1'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.dokkaVersion = '0.9.13'
     ext.liquibaseGradleVersion = '1.2.1'
@@ -99,7 +99,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-mail'
     compile 'org.springframework.boot:spring-boot-devtools'
-    //compile 'org.springframework.security.oauth:spring-security-oauth2'
+    compile 'org.springframework.security.oauth:spring-security-oauth2'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
     //common classes
     compile "com.irotsoma.cloudbackenc:common:$commonVersion"
@@ -115,9 +115,10 @@ dependencies {
     compile 'org.liquibase:liquibase-core'
     //apache commons
     compile "commons-validator:commons-validator:$apacheCommonsValidatorVersion"
+    //jjwt
+    compile "io.jsonwebtoken:jjwt:$jjwtVersion"
     //logging
     compile "io.github.microutils:kotlin-logging:$kotlinLoggingVersion"
-    compile "io.jsonwebtoken:jjwt:$jjwtVersion"
     //test
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
