--- a/config/application.properties
+++ b/config/application.properties
@@ -59,5 +59,5 @@ server.ssl.keyStoreType = PKCS12
 server.ssl.keyAlias = cloudbackenc
 
 jwt.secret=insecurepassword
-jwt.header = X-AUTH-TOKEN
+jwt.header = Bearer
 
