Some work on Token Authentication

--- a/config/application.properties
+++ b/config/application.properties
@@ -28,13 +28,16 @@ encryptionservices.directory = ./config/extensions
 encryptionservices.configFileName = encryption-service-extension.json
 
 logging.file=./logs/CentralController.log
-logging.level.root=INFO
+logging.level.root=DEBUG
 logging.level.com.irotsoma=DEBUG
 logging.level.org.springframework=INFO
 
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:./config/database/centralcontroller;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=admin
+spring.datasource.password=insecurepassword
 
 spring.messages.basename=messages
 spring.messages.cache-seconds=-1
@@ -58,6 +61,6 @@ server.ssl.key-store-password = insecurepassword
 server.ssl.keyStoreType = PKCS12
 server.ssl.keyAlias = cloudbackenc
 
-jwt.secret=insecurepassword
+jwt.secret = insecurepassword
 jwt.header = Bearer
-
+jwt.expiration = 3600000
