--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     ext.commonVersion = '0.2-SNAPSHOT'
     ext.springBootVersion = '1.5.2.RELEASE'
@@ -32,7 +33,6 @@ buildscript {
 plugins {
     id "com.github.hierynomus.license" version "0.13.1"
 }
-
 
 group 'com.irotsoma.cloudbackenc'
 version '0.2-SNAPSHOT'
@@ -110,22 +110,8 @@ dependencies {
 }
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
+    main.resources.srcDirs += "$buildDir/license-reports/"
 }
-/*
- * Copyright (C) 2017  Irotsoma, LLC
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- * You should have received a copy of the GNU Lesser General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>
- */
 
 //exclude spring boot logging as it will conflict with the slf4j used by kotlin logging
 configurations {
