--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-mail'
-    compile 'org.springframework.boot:spring-boot-devtools'
+    optional 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.security.oauth:spring-security-oauth2'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
     //common classes
