Work on file controller

--- a/config/application.properties
+++ b/config/application.properties
@@ -53,6 +53,9 @@ spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
+
 server.port=33300
 
 # This is for testing purposes only.  Use a real certificate. To turn off SSL  set server.ssl.key-store to blank and comment out the 3 lines below it.
