Work on cloud service login flow.

--- a/config/application.properties
+++ b/config/application.properties
@@ -30,7 +30,7 @@ info.build.version=${version}
 logging.file=./logs/CentralController.log
 logging.level.root=DEBUG
 logging.level.com.irotsoma=DEBUG
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
@@ -42,6 +42,9 @@ spring.datasource.password=insecurepassword
 spring.messages.basename=messages
 spring.messages.cache-seconds=-1
 spring.messages.encoding=UTF-8
+
+spring.mvc.async.request-timeout=6000
+server.connection-timeout=6000
 
 # Email server settings
 spring.mail.username=
