Work on UI application functionality

--- a/config/application.properties
+++ b/config/application.properties
@@ -21,7 +21,8 @@ cloudservices.configFileName = cloud-service-extension.json
 cloudservicefiles.maxFileVersions = 2
 
 jwt.secret = insecurepassword
-jwt.expiration = 86400000 
+#token expiration default = 30 days (2592000000 ms)
+jwt.expiration = 2592000000
 
 info.build.name=${name}
 info.build.description=${description}
