Google Auth logout implementation and general UI cleanup.

--- a/config/application.properties
+++ b/config/application.properties
@@ -29,9 +29,9 @@ info.build.description=${description}
 info.build.version=${version}
 
 logging.file=./logs/CentralController.log
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.level.com.irotsoma=DEBUG
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
