--- a/config/application.properties
+++ b/config/application.properties
@@ -21,7 +21,7 @@ cloudservices.configFileName = cloud-service-extension.json
 cloudservicefiles.maxFileVersions = 2
 
 jwt.secret = insecurepassword
-#token expiration default = 30 days (2592000000 ms)
+#token expiration default = 30 days (2592000000 ms) until a better auth system is implemented
 jwt.expiration = 2592000000
 
 info.build.name=${name}
