UI and Filecontroller now share DB. Added MariaDB driver to better support sharing DB.

--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations'
     //h2
     compile 'com.h2database:h2'
+    //mariaDb
+    compile 'org.mariadb.jdbc:mariadb-java-client'
     //liquibase
     compile 'org.liquibase:liquibase-core'
     //apache commons
