--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 
 buildscript {
     ext.commonVersion = '0.2-SNAPSHOT'
-    ext.springBootVersion = '1.5.2.RELEASE'
-    ext.tornadofxVersion = '1.6.0'
-    ext.kotlinVersion = '1.1.2'
+    ext.springBootVersion = '1.5.4.RELEASE'
+    ext.kotlinVersion = '1.1.3-2'
     ext.apacheCommonsValidatorVersion = '1.6'
-    ext.dokkaVersion = '0.9.13'
-    ext.liquibaseGradleVersion = '1.2.1'
-    ext.kotlinLoggingVersion = '1.4.3'
+    ext.dokkaVersion = '0.9.15'
+    ext.liquibaseGradleVersion = '1.2.4'
+    ext.kotlinLoggingVersion = '1.4.5'
     ext.jjwtVersion = '0.7.0'
+    ext.propdepsPluginVersion='0.0.9.RELEASE'
 
     repositories {
         mavenCentral()
@@ -16,7 +16,7 @@ buildscript {
         maven {url 'http://repo.spring.io/plugins-release'}
     }
     dependencies {
-        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
+        classpath "io.spring.gradle:propdeps-plugin:$propdepsPluginVersion"
         classpath "org.liquibase:liquibase-gradle-plugin:$liquibaseGradleVersion"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
@@ -31,7 +31,7 @@ buildscript {
 
 }
 plugins {
-    id "com.github.hierynomus.license" version "0.13.1"
+    id 'com.github.hierynomus.license' version '0.14.0'
 }
 
 group 'com.irotsoma.cloudbackenc'
@@ -82,8 +82,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-mail'
-    optional 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.security.oauth:spring-security-oauth2'
+    optional 'org.springframework.boot:spring-boot-devtools'
     optional 'org.springframework.boot:spring-boot-configuration-processor'
     //common classes
     compile "com.irotsoma.cloudbackenc:common:$commonVersion"
