Work on having file controller refresh tokens periodically to prevent them from expiring.

--- a/config/application.properties
+++ b/config/application.properties
@@ -23,6 +23,7 @@ cloudservicefiles.maxFileVersions = 2
 jwt.secret = insecurepassword
 #token expiration default = 30 days (2592000000 ms) until a better auth system is implemented
 jwt.expiration = 2592000000
+jwt.disabled=false
 
 info.build.name=${name}
 info.build.description=${description}
