--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 
 buildscript {
     ext.commonVersion = '0.2-SNAPSHOT'
-    ext.springBootVersion = '1.5.4.RELEASE'
-    ext.kotlinVersion = '1.1.3-2'
+    ext.springBootVersion = '1.5.8.RELEASE'
+    ext.kotlinVersion = '1.1.51'
     ext.apacheCommonsValidatorVersion = '1.6'
     ext.dokkaVersion = '0.9.15'
     ext.liquibaseGradleVersion = '1.2.4'
-    ext.kotlinLoggingVersion = '1.4.5'
-    ext.jjwtVersion = '0.7.0'
-    ext.propdepsPluginVersion='0.0.9.RELEASE'
+    ext.kotlinLoggingVersion = '1.4.6'
+    ext.jjwtVersion = '0.9.0'
+    ext.propdepsPluginVersion='0.0.10.RELEASE'
 
     repositories {
         mavenCentral()
