Working on making extensions and the repositories more generic.

--- a/config/application.properties
+++ b/config/application.properties
@@ -25,6 +25,11 @@ jwt.secret = insecurepassword
 jwt.expiration = 2592000000
 jwt.disabled=false
 
+encryptionservices.directory = config/extensions
+encryptionservices.configFileName = encryption-service-extension.json
+encryptionservices.defaultServiceUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
+
+
 info.build.name=${name}
 info.build.description=${description}
 info.build.version=${version}
