--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 
 buildscript {
-    ext.commonVersion = '0.2-SNAPSHOT'
-    ext.springBootVersion = '1.5.8.RELEASE'
-    ext.kotlinVersion = '1.1.51'
+    ext.commonVersion = '0.3-SNAPSHOT'
+    ext.springBootVersion = '1.5.9.RELEASE'
+    ext.kotlinVersion = '1.2.10'
     ext.apacheCommonsValidatorVersion = '1.6'
-    ext.dokkaVersion = '0.9.15'
+    ext.dokkaVersion = '0.9.14'
     ext.liquibaseGradleVersion = '1.2.4'
     ext.kotlinLoggingVersion = '1.4.6'
     ext.jjwtVersion = '0.9.0'
     ext.propdepsPluginVersion='0.0.10.RELEASE'
+    ext.jacksonVersion='2.9.3'
 
     repositories {
-        mavenCentral()
         jcenter()
+        mavenCentral()
         maven {url 'http://repo.spring.io/plugins-release'}
     }
     dependencies {
@@ -35,7 +36,7 @@ plugins {
 }
 
 group 'com.irotsoma.cloudbackenc'
-version '0.2-SNAPSHOT'
+version '0.3-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
@@ -88,11 +89,12 @@ dependencies {
     //common classes
     compile "com.irotsoma.cloudbackenc:common:$commonVersion"
     compile "com.irotsoma.cloudbackenc.common:cloudservicesserviceinterface:$commonVersion"
+    compile "com.irotsoma.cloudbackenc.common:encryptionserviceinterface:$commonVersion"
     //jackson
-    compile 'com.fasterxml.jackson.module:jackson-module-kotlin'
-    compile 'com.fasterxml.jackson.core:jackson-core'
-    compile 'com.fasterxml.jackson.core:jackson-databind'
-    compile 'com.fasterxml.jackson.core:jackson-annotations'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
+    compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     //h2
     compile 'com.h2database:h2'
     //mariaDb
