--- a/config/application.properties
+++ b/config/application.properties
@@ -25,9 +25,9 @@ jwt.secret = insecurepassword
 jwt.expiration = 2592000000
 jwt.disabled=false
 
-encryptionservices.directory = config/extensions
-encryptionservices.configFileName = encryption-service-extension.json
-encryptionservices.defaultServiceUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
+encryptionextensions.directory = config/extensions
+encryptionextensions.configFileName = encryption-service-extension.json
+encryptionextensions.defaultServiceUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
 
 info.build.name=${name}
