--- a/build.gradle
+++ b/build.gradle
@@ -117,6 +117,22 @@ sourceSets {
     main.resources.srcDirs += "$buildDir/license-reports/"
 }
 
+/*
+ * Copyright (C) 2016-2018  Irotsoma, LLC
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>
+ */
+
 //exclude spring boot logging as it will conflict with the slf4j used by kotlin logging
 configurations {
     all*.exclude module : 'spring-boot-starter-logging'
