--- a/config/application.properties
+++ b/config/application.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2016-2017  Irotsoma, LLC
+# Copyright (C) 2016-2018  Irotsoma, LLC
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as published by
@@ -27,7 +27,7 @@ jwt.disabled=false
 
 encryptionextensions.directory = config/extensions
 encryptionextensions.configFileName = encryption-service-extension.json
-encryptionextensions.defaultServiceUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
+encryptionextensions.defaultExtensionUuid = 8ccdef5f-5833-4264-acd5-4c67a24320c0
 
 
 info.build.name=${name}
